--- a/src/components/task-list/task-list-header.module.css
+++ b/src/components/task-list/task-list-header.module.css
@@ -11,7 +11,6 @@
 }
 
 .ganttTable_HeaderSeparator {
-  border-right: 1px solid rgb(196, 196, 196);
   opacity: 1;
   margin-left: -2px;
 }
@@ -20,4 +19,7 @@
   display: table-cell;
   vertical-align: -webkit-baseline-middle;
   vertical-align: middle;
+  border-right: 1px solid #e6e4e4;
+  text-align: center;
+  font-weight: bold;
 }
