Added grand child functionality

--- a/src/components/task-list/task-list-table.module.css
+++ b/src/components/task-list/task-list-table.module.css
@@ -41,3 +41,9 @@
   padding-left: 35px;
   user-select: none;
 }
+
+.taskListEmptyExpanderGrandChild {
+  font-size: 0.6rem;
+  padding-left: 55px;
+  user-select: none;
+}
